--- a/chromium/package.json
+++ b/chromium/package.json
@@ -5,10 +5,16 @@
   "main": "utils.js",
   "dependencies": {},
   "devDependencies": {
+    "atob": "^2.0.3",
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
-    "mocha": "^4.0.0",
-    "nyc": "^11.2.1"
+    "fetch-mock": "^6.1.0",
+    "mocha": "^4.1.0",
+    "node-webcrypto-ossl": "^1.0.35",
+    "nyc": "^11.6.0",
+    "sinon": "^4.4.6",
+    "sinon-chrome": "^2.3.1",
+    "text-encoding": "^0.6.4"
   },
   "scripts": {
     "test": "mocha",
