--- a/chromium/package.json
+++ b/chromium/package.json
@@ -6,13 +6,14 @@
   "dependencies": {},
   "devDependencies": {
     "atob": "^2.0.3",
+    "btoa": "^1.1.2",
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
-    "fetch-mock": "^6.1.0",
+    "fetch-mock": "^6.3.0",
     "mocha": "^4.1.0",
-    "node-webcrypto-ossl": "^1.0.35",
+    "node-webcrypto-ossl": "^1.0.36",
     "nyc": "^11.6.0",
-    "sinon": "^4.4.6",
+    "sinon": "^4.4.8",
     "sinon-chrome": "^2.3.1",
     "text-encoding": "^0.6.4"
   },
